--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet"> 
 </head>
 <body>
-
-	<h1>Nanang Arifudin</h1>
-	<h2>saya adalah saya</h2>
+	<nav>
+		<img id="navbar-logo" src="img/logo.png">
+		<ul>
+			<li>Home</li>
+			<li>About</li>
+			<li>Contact</li>
+		</ul>
+		<hr size="1px" width="100%">
+	</nav>
 
 </body>
 </html>
