--- a/index.html
+++ b/index.html
@@ -11,11 +11,27 @@
 	<nav>
 		<img id="navbar-logo" src="img/logo.png">
 		<ul>
-			<li>Home</li>
-			<li>About</li>
-			<li>Contact</li>
+			<li>
+				<a href="index.html">Home</a>
+			</li>
+			<li>
+				<a href="About_us.html">About Us</a>
+			</li>
+			<li>
+				<a href="contact_us.html">Contact Us</a>
+			</li>
 		</ul>
 	</nav>
+	<section id="info_utama" class="section">	
+		<h1>Hallo</h1>
+
+		<p>jasgdgahd wjhefgvwejhgf wefguwekhfjkwebui uigfuibjkf</p>
+	</section>
+
+	<section id="keahlian" class="section">	
+		<h2>jkghasjkdh</h2>
+	</section>
+	
 
 </body>
 </html>
