--- a/index.html
+++ b/index.html
@@ -22,16 +22,18 @@
 			</li>
 		</ul>
 	</nav>
-	<section id="info_utama" class="section">	
-		<h1>Hallo</h1>
+	<div class="section" id="identitas">	
+		<h3>Hallo,</h3>
+		<h1>Saya Nanang</h1>
 
-		<p>jasgdgahd wjhefgvwejhgf wefguwekhfjkwebui uigfuibjkf</p>
-	</section>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	</div>
 
-	<section id="keahlian" class="section">	
-		<h2>jkghasjkdh</h2>
-	</section>
-	
 
 </body>
 </html>
