--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
 		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 	</div>
-	<div class="footer">Footer</div>
+	<div class="footer" >
+		<p>Ini footernya</p>
+</div>
 
 
 
