--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
 			<img  src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTjRoIY6OIQwFRt6KpdY1mUVxt6bGaKR5XAXeoFNrMdlFFSrccL">
 			<img src="https://cdn3.iconfinder.com/data/icons/2018-social-media-logotypes/1000/2018_social_media_popular_app_logo-whatsapp-512.png">
 			<img src="img/gmail.png">
+			<p>Copyright ©nngarfdn on GitHub</p>
 		</div>
 
 
